[package]
name = "exams"
version = "0.1.0"
authors = ["Máron <maron.franca@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = "0.4.0" 
dotenv = "0.15.0"
include_dir = "0.6.0"
serde = { version = "1.0.123", features = ["derive", "rc"] }
serde_json = "1.0.62"   
sqlx-pg-migrate = "1.1.0"
tokio = {version="0.2.18",features = ["stream", "macros"]}
sqlx = { version = "0.4.0", features = [ "runtime-tokio-rustls", "postgres", ] }
