[package]
name = "rust-api"
version = "0.1.0"
authors = ["Máron <maron.franca@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
amiquip = "0.4.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = { version = "1.0.123", features = ["derive", "rc"] }
serde_json = "1.0.62"
